Closed Bug 401793 Opened 17 years ago Closed 17 years ago

Dialogs shouldn't use textured window style

Categories

(Core :: Widget: Cocoa, defect, P3)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: bent.mozilla, Assigned: hwaara)

Details

Attachments

(3 files)

Textured window style should only be applied to eWindowType_toplevel windows, not eWindowType_dialog as well. Apparently Safari and iTunes on 10.4 have a few examples of dialogs with the texture (Download Manager in Safari, the Now Playing window in iTunes) but all other dialogs have a normal window style.
What do you mean by "textured window style" here Ben? The unified toolbar style? 
Yup. The style bit is called 'NSTexturedBackgroundWindowMask'.
Attached patch Fix v1Splinter Review
This makes only top level windows take on the unified look, which makes sense. Dialogs are never toolbar windows.

I'll upload two screenshots to demonstrate the fix.
Attachment #289072 - Flags: review?(joshmoz)
Attached image Before patch
Attached image After patch
Attachment #289072 - Flags: superreview?(roc)
Attachment #289072 - Flags: review?(joshmoz)
Attachment #289072 - Flags: review+
Flags: blocking1.9+
Priority: -- → P3
Attachment #289072 - Flags: superreview?(roc) → superreview+
Landed.  Colin, what was the bug# for the other bug about making the unified style opt-in? Please CC me, thanks.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee: joshmoz → hwaara
Status: REOPENED → NEW
Status: NEW → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
It *is* opt-in. The issue you are seeing in those screenshots is the theme's CSS is blanket specifying that all windows should this attribute, instead of differentiating between the various types. I don't know why or how hard it is for the theme to do this, or why they didn't in the first place.

If you don't set the titlebarcolor attribute, it should be drawing with an appearance identical to a normal window, and is doing that as far as I can tell by testing a regular old XUL app, not firefox.

Really, shouldn't we fix this in the theme?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: