bug 401793. only top-level windows should be able to get unified toolbar window style. r=josh, sr=roc, a=blocking1.9+